Fixed banner overflow issue

--- a/src/app/app-route-home/app-route-home.component.css
+++ b/src/app/app-route-home/app-route-home.component.css
@@ -2,6 +2,7 @@
   max-width: 1200px;
   margin: 2em auto;
   padding: 0 1em;
+  overflow: hidden;
 }
 
 .banner img {
